--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ashwamegh/react-link-preview": "^1.0.0",
+    "@cyntler/react-doc-viewer": "^1.15.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,16 +12,20 @@
     "axios": "^1.6.8",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.11.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-use-downloader": "^1.2.8",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
