--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.11.0",
     "moment": "^2.30.1",
+    "peerjs": "^1.5.4",
     "react": "^18.2.0",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-use-downloader": "^1.2.8",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "simple-peer": "^9.11.1",
     "sweetalert2": "^11.10.7",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
